# bsp-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  toolchain-riscv64.cmake
bsp/: CMakeLists.txt  README.md
bsp/drivers/: adder_accelerator.c  clint.c  plic.c  uart_ns16550a.c
bsp/include/: adder_accelerator.h  clint.h  platform.h  plic.h  uart.h
bsp/lib/: malloc.c  printf.c  syscalls.c
bsp/linker/: rv64-virt.ld
bsp/startup/: crt0.S  vectors.S
docs/: 01_adding_custom_device.md  IREE_CUSTOM_ACCELERATOR_INTEGRATION.md  NEWLIB_IMPLEMENTATION.md  QEMU_CUSTOM_DEVICE_TUTORIAL.md  QEMU_EXECUTION_ANALYSIS.md  README.md  README_INSTALL.md  SYSTOLIC_ARRAY_GUIDE.md  qemu-memory-map.md
iree/: CMakeLists.txt  README.md  ir_log  ir_log_full  toolchain-riscv64.cmake
iree/models/: matmul_softmax.mlir  vadd.mlir  vadd_i32.mlir
iree/scripts/: run-qemu.sh
iree/src/: main.c  main_vadd_i32.c  vadd_i32_accel.c
qemu-patches/hw/misc/: Kconfig  adder_accelerator.c  meson.build
qemu-patches/hw/riscv/: virt.c
qemu-patches/include/hw/misc/: adder_accelerator.h
qemu-patches/include/hw/riscv/: virt.h
scripts/: run-qemu-custom.sh  run-qemu.sh  run-test-newlib.sh
tests/: CMakeLists.txt  hello_world.c  test_adder.c  test_newlib.c
